2010-06-28
  * Ticket update for version 0.12 did not work, closes #209
    Author: mark underscore kids add yahoo dot com
    Applied by: Bas van der Vlies
    
2010-06-23
  * A better fix for attachments with special characters, closes #206
    Reported by: karsten dot rohrbach add wibas dot de
    Fixed by: Bas van der Vlies

2010-06-22
  * When debug is enabled email2trac chokes on non-ascii (utf8) 
    characters in ticket fields, closes #205
    Reported by: eirik dot schwenke add nsd dot uib dot no
    Fixed by: Bas van der Vlies

  * Email2trac crashes when attachment filename contains non-ascii       
    characters, closes #206
    Reported by: karsten dot rohrbach add wibas dot de
    Fixed by: Bas van der Vlies

2010-06-09
  * Support added for trac version 0.12, closes #201
    Reported by: mark_kids add yahoo dot com 
    Fixed by: Bas van der Vlies 
    
2010-05-25
  * delete_spam still used the trac_version in email2trac.comf
    Fixed by: Bas van der Vlies

  * email2trac crashed when ticket_update_by_subject was enabled. 
    Fixed by: Bas van der Vlies

2010-05-20
  * email2trac crashed if there are '/' and '\' characters in a filename.
    These characters are now being replace by '_', closes #196
    Reported by: jcuppen add hethooghuis dot nl
    Fixed by: Bas van der Vlies

  * Problems with attachments were not reported for ticket updates 
    Fixed by: Bas van der Vlies

  * delete_spam changes:
     - only support trac version greater then 0.10
     - added -n/--dry-run option
     - added -v/--verbose option

    Author: Bas van der Vlies

  * Enhancement for ticket prefixes (email2trac.conf). The ticket 
    fields status and resolution are not forbidden any more. closes #195 
    Author: Konstantin Ryabitsev <icon add mricon dot com>
    Applied by: Bas van der Vlies

  * Added a new option. It is all in the name:
      * ticket_update_by_subject, default value is off
      * ticket_update_by_subject_lookback, default 30 days
